--- a/CropView/Base.lproj/Main.storyboard
+++ b/CropView/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,11 +13,30 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CropView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kevin-mueller-JoGSRrSrxc4-unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="5li-O5-wBx">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ARc-1Y-0l2" customClass="CropView" customModule="CropView" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ARc-1Y-0l2" secondAttribute="bottom" id="061-zU-3hM"/>
+                            <constraint firstItem="5li-O5-wBx" firstAttribute="leading" secondItem="ARc-1Y-0l2" secondAttribute="leading" id="1l6-8H-zqg"/>
+                            <constraint firstItem="5li-O5-wBx" firstAttribute="bottom" secondItem="ARc-1Y-0l2" secondAttribute="bottom" id="CVc-pB-Y0r"/>
+                            <constraint firstItem="5li-O5-wBx" firstAttribute="top" secondItem="ARc-1Y-0l2" secondAttribute="top" id="Nu5-j6-EDG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ARc-1Y-0l2" secondAttribute="trailing" id="j6f-6D-g26"/>
+                            <constraint firstItem="5li-O5-wBx" firstAttribute="trailing" secondItem="ARc-1Y-0l2" secondAttribute="trailing" id="lpq-BC-F6e"/>
+                            <constraint firstItem="ARc-1Y-0l2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="n0Z-5q-ilR"/>
+                            <constraint firstItem="ARc-1Y-0l2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="s7V-Sh-SgA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -21,4 +44,7 @@
             </objects>
         </scene>
     </scenes>
+    <resources>
+        <image name="kevin-mueller-JoGSRrSrxc4-unsplash" width="4160" height="6240"/>
+    </resources>
 </document>
