--- a/CropView/Base.lproj/Main.storyboard
+++ b/CropView/Base.lproj/Main.storyboard
@@ -18,27 +18,68 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kevin-mueller-JoGSRrSrxc4-unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="5li-O5-wBx">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="4pL-uY-N3S">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                            </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ARc-1Y-0l2" customClass="CropView" customModule="CropView" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="eRc-9j-IxA">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZrF-Mz-Gcl">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="tiD-fE-zD1"/>
+                                                </constraints>
+                                                <state key="normal" title="Apply"/>
+                                                <connections>
+                                                    <action selector="applyButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nSc-pd-aB3"/>
+                                                </connections>
+                                            </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YLw-gl-4f5">
+                                                <rect key="frame" x="0.0" y="30" width="414" height="788"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kevin-mueller-JoGSRrSrxc4-unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="5li-O5-wBx">
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="788"/>
+                                                    </imageView>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ARc-1Y-0l2" customClass="CropView" customModule="CropView" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="788"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstItem="ARc-1Y-0l2" firstAttribute="leading" secondItem="5li-O5-wBx" secondAttribute="leading" id="3fy-as-pb3"/>
+                                                    <constraint firstAttribute="bottom" secondItem="5li-O5-wBx" secondAttribute="bottom" id="3uk-o4-cfG"/>
+                                                    <constraint firstItem="ARc-1Y-0l2" firstAttribute="top" secondItem="5li-O5-wBx" secondAttribute="top" id="IoD-1s-LUY"/>
+                                                    <constraint firstItem="ARc-1Y-0l2" firstAttribute="trailing" secondItem="5li-O5-wBx" secondAttribute="trailing" id="O7K-cG-F1r"/>
+                                                    <constraint firstItem="5li-O5-wBx" firstAttribute="leading" secondItem="YLw-gl-4f5" secondAttribute="leading" id="Tao-Xf-toI"/>
+                                                    <constraint firstItem="5li-O5-wBx" firstAttribute="top" secondItem="YLw-gl-4f5" secondAttribute="top" id="XKb-uY-pN8"/>
+                                                    <constraint firstAttribute="trailing" secondItem="5li-O5-wBx" secondAttribute="trailing" id="e5r-pk-aNv"/>
+                                                    <constraint firstItem="ARc-1Y-0l2" firstAttribute="bottom" secondItem="5li-O5-wBx" secondAttribute="bottom" id="qzn-ff-AvA"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dD0-Lv-Vcv">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ARc-1Y-0l2" secondAttribute="bottom" id="061-zU-3hM"/>
-                            <constraint firstItem="5li-O5-wBx" firstAttribute="leading" secondItem="ARc-1Y-0l2" secondAttribute="leading" id="1l6-8H-zqg"/>
-                            <constraint firstItem="5li-O5-wBx" firstAttribute="bottom" secondItem="ARc-1Y-0l2" secondAttribute="bottom" id="CVc-pB-Y0r"/>
-                            <constraint firstItem="5li-O5-wBx" firstAttribute="top" secondItem="ARc-1Y-0l2" secondAttribute="top" id="Nu5-j6-EDG"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ARc-1Y-0l2" secondAttribute="trailing" id="j6f-6D-g26"/>
-                            <constraint firstItem="5li-O5-wBx" firstAttribute="trailing" secondItem="ARc-1Y-0l2" secondAttribute="trailing" id="lpq-BC-F6e"/>
-                            <constraint firstItem="ARc-1Y-0l2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="n0Z-5q-ilR"/>
-                            <constraint firstItem="ARc-1Y-0l2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="s7V-Sh-SgA"/>
+                            <constraint firstItem="4pL-uY-N3S" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="7QB-bX-fuj"/>
+                            <constraint firstItem="4pL-uY-N3S" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="8Df-wS-rdF"/>
+                            <constraint firstItem="4pL-uY-N3S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="n1g-ku-cXL"/>
+                            <constraint firstItem="4pL-uY-N3S" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="wFC-tW-LSW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="cropView" destination="ARc-1Y-0l2" id="laA-OC-aQK"/>
+                        <outlet property="innerStackView" destination="eRc-9j-IxA" id="sBt-ZH-Iua"/>
+                        <outlet property="originalImageView" destination="5li-O5-wBx" id="Sok-xc-syP"/>
+                        <outlet property="resultImageView" destination="dD0-Lv-Vcv" id="X4n-4K-C6W"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
